# label-preserver

./: Cargo.toml  Dockerfile  README.md  deployment.yaml  lint.sh  rbac.yaml  serviceaccount.yaml  test.sh
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: labels_tests.rs
