[package]
name = "label-preserver"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2"

[dev-dependencies]
rand = "0.9"
